--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./server/server.js --exec babel-node"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,22 @@
   "bugs": {
     "url": "https://github.com/SBiografia/SBlog/issues"
   },
-  "homepage": "https://github.com/SBiografia/SBlog#readme"
+  "homepage": "https://github.com/SBiografia/SBlog#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "hpp": "^0.2.3",
+    "moment": "^2.29.1",
+    "mongoose": "^5.12.13"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.5",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.14.5",
+    "babel-loader": "^8.2.2"
+  }
 }
