--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SBlog",
+  "name": "sblog",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,13 +18,16 @@
   },
   "homepage": "https://github.com/SBiografia/SBlog#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.12.13"
+    "mongoose": "^5.12.13",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
