--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./server/server.js --exec babel-node"
+    "dev": "nodemon ./server/server.js --exec babel-node --ignore './client'"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SBiografia/SBlog#readme",
   "dependencies": {
+    "babel-node": "0.0.1-security",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -26,8 +27,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.12.13",
-    "morgan": "^1.10.0"
+    "mongoose": "^5.12.14"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
@@ -35,6 +35,8 @@
     "@babel/node": "^7.14.5",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.14.5",
-    "babel-loader": "^8.1.0"
+    "babel-loader": "^8.1.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7"
   }
 }
