--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "greenlock-express": "^4.0.3",
     "helmet": "^4.6.0",
     "history": "^4.10.1",
     "hpp": "^0.2.3",
