--- a/client/package.json
+++ b/client/package.json
@@ -115,6 +115,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "build:client": "node --max-old-space-size=1024 scripts/build.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
