--- a/package.json
+++ b/package.json
@@ -42,10 +42,14 @@
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.8",
     "@babel/node": "^7.14.7",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.14.8",
     "babel-loader": "^8.2.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12"
-  }
+  },
+  "plugins": [
+    "@babel/plugin-transform-runtime"
+  ]
 }
