--- a/client/package.json
+++ b/client/package.json
@@ -114,7 +114,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "INLINE_RUNTIME_CHUNK=false && node scripts/build.js",
     "build:client": "node --max-old-space-size=1024 scripts/build.js",
     "test": "node scripts/test.js"
   },
