--- a/.greenlockrc
+++ b/.greenlockrc
@@ -1,1 +1,1 @@
-{"manager":{"module":"@greenlock/manager"},"configDir":"./server/config/greenlock.d"}
+{"manager":{"module":"@greenlock/manager"},"configDir":"/Users/sb/ㅇㅅㅂ/WEB/MERN_blog/sblog/server/config/greenlock.d"}
